# foodgram-project-react

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: push_image_to_dockerhub.yml
backend/: Dockerfile  requirements.txt
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/followers/: models.py
backend/foodgram_django/config/: settings.py
backend/foodgram_django/users/migrations/: 0001_initial.py
backend/recipes/: admin.py  fields.py  mixins.py  models.py  serializers.py  urls.py  views.py
backend/recipes/migrations/: 0001_initial.py  0002_ingredientinrecipe_ingredientinrecipe_unique.py  0003_auto_20220515_2035.py  0004_recipe_pub_date.py  0005_auto_20220519_2127.py  0006_auto_20220521_1046.py  0007_auto_20220523_1309.py  0008_alter_recipe_options.py
backend/settings/: asgi.py  settings.py  urls.py  wsgi.py
backend/subscriptions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/subscriptions/migrations/: 0001_initial.py  0002_subscription_subscription_subscribed_not_equals_subscriber.py
backend/users/: admin.py  models.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0002_alter_user_email.py  0003_auto_20220518_1700.py  0004_alter_user_email.py
data/: ingredients.csv
data/demo_db_dump/: foodgram_dump.json
data/introductory_db_dump/: foodgram_dump.json
docs/: openapi-schema.yml
frontend/: Dockerfile
infra/: .env.example  Makefile  docker-compose.yml  nginx.conf
